# tauri-elm-counter

./: .gitignore  Justfile  Makefile  README.md  elm.json
public/: index.html
src/: Main.elm
src-elm/: Main.elm
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
