[package]
name = "tauri-elm-counter"
version = "0.0.1"
description = "A Tauri (Vanilla) + Elm Counter Example"
authors = ["eaon <eaon@posteo.net>"]
license = "GPL-3.0-or-later"
repository = "https://codeberg.org/eaon/tauri-elm-counter"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.0", features = ["shell-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
